force-app/main/default/objects/cwbtool__UserFilterPreference__c/cwbtool__UserFilterPreference__c.object-meta.xml
<CustomObject>
    <label>User Filter Preference</label>
    <nameField>
        <displayFormat>Filter-{0000}</displayFormat>
        <label>User Filter Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Filter Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>