force-app/main/default/objects/cwbtool__UserFilterPreference__c/fields/cwbtool__ComponentType__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ComponentType__c</fullName>
    <label>Component Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>