force-app/main/default/objects/cwbtool__UserFilterPreference__c/fields/cwbtool__Filter__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Filter__c</fullName>
    <label>Filter</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>