force-app/main/default/objects/cwbtool__UserFilterPreference__c/fields/cwbtool__UserID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__UserID__c</fullName>
    <label>User ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>